--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,13 @@
       href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
       rel="stylesheet"
     />
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-
-  </head>
+    <script>
+      window.CESIUM_BASE_URL = 'http://localhost:4200/assets/Cesium/';
+    </script>
+ <!-- Include the CesiumJS JavaScript and CSS files -->
+ <script src="https://cesium.com/downloads/cesiumjs/releases/1.111/Build/Cesium/Cesium.js"></script>
+ <link href="https://cesium.com/downloads/cesiumjs/releases/1.111/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+</head>
   <body>
     <app-root></app-root>
   </body>
